--- a/trunk/android/huyenhoc/res/values/strings.xml
+++ b/trunk/android/huyenhoc/res/values/strings.xml
@@ -20,6 +20,9 @@
     <string name="gt">&gt;</string>
     <string name="sendsms">Gửi tin nhắn</string>
 	<string name="err_name">Họ và tên không được bỏ trống.</string>
+	<string name="err_con">Cần có kết nối internet để tải dữ liệu, hãy thử lại.</string>
+	<string name="lunartosolar">Âm sang dương</string>
+	<string name="solartolunar">Dương sang âm</string>
 	<string-array name="optiontype">
 		<item >Cá nhân</item>
 		<item >Hôn nhân gia đình</item>
@@ -37,5 +40,5 @@
 	<string name="dung">dụng</string>
 	<string name="cuoc">cuộc</string>
 	<string name="song">sống</string>
-	<string name="err_con">Cần có kết nối internet để tải dữ liệu, hãy thử lại.</string>
+	
 </resources>
