--- a/trunk/android/Euro2012/res/values/strings.xml
+++ b/trunk/android/Euro2012/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="ga">GA</string>
     <string name="gd">GD</string>
     <string name="pts">PTS</string>
+    <string name="details">&gt;</string>
     
     
 </resources>
