--- a/trunk/android/Euro2012/res/values/strings.xml
+++ b/trunk/android/Euro2012/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="gd">GD</string>
     <string name="pts">PTS</string>
     <string name="details">&gt;</string>
+    <string name="pleasewait">Please wait</string>
     
     
 </resources>
