--- a/trunk/android/Euro2012/res/values-vi/strings.xml
+++ b/trunk/android/Euro2012/res/values-vi/strings.xml
@@ -3,33 +3,33 @@
     
     <string name="hello">Hello World, Main!</string>
     <string name="app_name">Euro2012</string>
-    <string name="schedule">Schedule</string>
-    <string name="news">News</string>
-    <string name="teams">Teams</string>
-    <string name="setting">Setting</string>
-    <string name="matchdetail">Match Detail</string>
-    <string name="stadium">Stadium</string>
-    <string name="arbitration">Arbitration</string>
-    <string name="teamdetail">Team Detail</string>
-    <string name="description">Description</string>
+    <string name="schedule">Lịch</string>
+    <string name="news">Tin tức</string>
+    <string name="teams">Đội tuyển</string>
+    <string name="setting">Tùy chỉnh</string>
+    <string name="matchdetail">Thông tin trận đấu</string>
+    <string name="stadium">Sân vận động</string>
+    <string name="arbitration">Trọng tài</string>
+    <string name="teamdetail">Đội tuyển</string>
+    <string name="description">Thông tin</string>
     <string name="testdes">The England national football team represents England in association football and is controlled by the Football Association, the governing body forThe England national football team represents England in association football and is controlled by the Football Association, the governing body forThe England national football team represents England in association football and is controlled by the Football Association, the governing body for</string>
-    <string name="playerlist">Players List</string>
+    <string name="playerlist">Danh sách cầu thủ</string>
     <string name="tno">T.No</string>
-    <string name="name">Name</string>
-    <string name="position">Position</string>
-    <string name="groupa">GROUP A</string>
-    <string name="groupb">GROUP B</string>
-    <string name="groupc">GROUP C</string>
-    <string name="groupd">GROUP D</string>
-    <string name="team">Team</string>
-    <string name="pld">PLD</string>
-    <string name="w">W</string>
-    <string name="d">D</string>
-    <string name="l">L</string>
+    <string name="name">Tên</string>
+    <string name="position">Vị trí</string>
+    <string name="groupa">BẢNG A</string>
+    <string name="groupb">BẢNG B</string>
+    <string name="groupc">BẢNG C</string>
+    <string name="groupd">BẢNG D</string>
+    <string name="team">Đội tuyển</string>
+    <string name="pld">Trận</string>
+    <string name="w">T</string>
+    <string name="d">H</string>
+    <string name="l">B</string>
     <string name="gf">GF</string>
     <string name="ga">GA</string>
     <string name="gd">GD</string>
-    <string name="pts">PTS</string>
+    <string name="pts">Điểm</string>
     <string name="details">&gt;</string>
     <string name="pleasewait">Hãy chờ</string>
     <string name="nonetwork">Không có kết nối mạng.</string>
