--- a/trunk/android/Euro2012/res/values/strings.xml
+++ b/trunk/android/Euro2012/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="fifarank">Fifa rank</string>
     <string name="coach">Coach</string>
     <string name="attend">Attend Euro times</string>
+    <string name="player">Player</string>
     
     
 </resources>
