--- a/android/Euro2012/res/values/strings.xml
+++ b/android/Euro2012/res/values/strings.xml
@@ -42,6 +42,17 @@
     <string name="coach">Coach</string>
     <string name="attend">Attend Euro times</string>
     <string name="player">Player</string>
+    <string name="settingreply">Setting reply</string>
+    <string name="warnewsmsg">Notification when a new message</string>
+    <string name="vibrate">Vibrate when a goal</string>
+    <string name="settinglanguage">Setting Language</string>
+    <string name="english">English</string>
+    <string name="korean">한국의</string>
+    <string name="vietnam">Việt Nam</string>
+    <string name="contact">Contact</string>
+    <string name="feedback">Feedback</string>
+    <string name="aboutus">About us</string>
+    
     
     
 </resources>
