--- a/android/Euro2012/res/values-vi/strings.xml
+++ b/android/Euro2012/res/values-vi/strings.xml
@@ -29,7 +29,7 @@
     <string name="gf">GF</string>
     <string name="ga">GA</string>
     <string name="gd">GD</string>
-    <string name="pts">Điểm</string>
+    <string name="pts">PT</string>
     <string name="details">&gt;</string>
     <string name="pleasewait">Hãy chờ</string>
     <string name="nonetwork">Không có kết nối mạng.</string>
