--- a/android/Euro2012/res/values-vi/strings.xml
+++ b/android/Euro2012/res/values-vi/strings.xml
@@ -7,7 +7,7 @@
     <string name="news">Tin tức</string>
     <string name="teams">Đội tuyển</string>
     <string name="setting">Tùy chỉnh</string>
-    <string name="matchdetail">Thông tin trận đấu</string>
+    <string name="matchdetail">Trận đấu</string>
     <string name="stadium">Sân vận động</string>
     <string name="arbitration">Trọng tài</string>
     <string name="teamdetail">Đội tuyển</string>
