--- a/trunk/android/Euro2012/res/values-vi/strings.xml
+++ b/trunk/android/Euro2012/res/values-vi/strings.xml
@@ -48,7 +48,7 @@
     <string name="settinglanguage">Tùy chọn ngôn ngữ</string>
     <string name="english">English</string>
     <string name="korean">한국의</string>
-    <string name="vietnam">Việt Nam</string>
+    <string name="vietnam">Tiếng Việt</string>
     <string name="contact">Liên hệ</string>
     <string name="feedback">Gửi ý kiến đóng góp</string>
     <string name="aboutus">Thông tin ứng dụng</string>
