--- a/android/Euro2012/res/values/strings.xml
+++ b/android/Euro2012/res/values/strings.xml
@@ -48,7 +48,7 @@
     <string name="settinglanguage">Setting Language</string>
     <string name="english">English</string>
     <string name="korean">한국의</string>
-    <string name="vietnam">Việt Nam</string>
+    <string name="vietnam">Tiếng Việt</string>
     <string name="contact">Contact</string>
     <string name="feedback">Feedback</string>
     <string name="aboutus">About us</string>
