--- a/trunk/android/Euro2012/res/values/strings.xml
+++ b/trunk/android/Euro2012/res/values/strings.xml
@@ -36,7 +36,7 @@
     <string name="details">&gt;</string>
     <string name="pleasewait">Please wait</string>
     <string name="nonetwork">No internet connection.</string>
-    <string name="estimate">Estimated year:</string>
+    <string name="estimate">Estimated year</string>
     <string name="fifajoin">Fifa join year</string>
     <string name="fifarank">Fifa rank</string>
     <string name="coach">Coach</string>
