--- a/trunk/android/Euro2012/res/values/strings.xml
+++ b/trunk/android/Euro2012/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="setting">Setting</string>
     <string name="matchdetail">Match Detail</string>
     <string name="stadium">Stadium</string>
-    <string name="arbitration">Arbitration</string>
+    <string name="arbitration">Refree</string>
     <string name="teamdetail">Team Detail</string>
     <string name="description">Description</string>
     <string name="testdes">The England national football team represents England in association football and is controlled by the Football Association, the governing body forThe England national football team represents England in association football and is controlled by the Football Association, the governing body forThe England national football team represents England in association football and is controlled by the Football Association, the governing body for</string>
