--- a/android/Euro2012/res/values/strings.xml
+++ b/android/Euro2012/res/values/strings.xml
@@ -70,5 +70,6 @@
 	<string name="betOver">Over/Under</string>
     <string name="notstart">Not start yet, or no data.</string>
     <string name="needvideoplayer">You need a video player installed to view.</string>
+	<string name="back">Back</string>
     
 </resources>
