--- a/trunk/android/Euro2012/res/values-ko/strings.xml
+++ b/trunk/android/Euro2012/res/values-ko/strings.xml
@@ -69,5 +69,5 @@
 	<string name="betEuro">유로 내기비율</string>
 	<string name="betOver">골 내기비율u</string>
 	<string name="notstart">경기전.</string>
-	
+	<string name="back">이전</string>
 </resources>
