--- a/trunk/android/Euro2012/res/values-vi/strings.xml
+++ b/trunk/android/Euro2012/res/values-vi/strings.xml
@@ -70,5 +70,5 @@
 	<string name="betOver">Tỷ lệ tài xỉu</string>
 	<string name="notstart">Chưa bắt đầu trận đấu, hoặc không có dữ liệu.</string>
 	<string name="needvideoplayer">Cần cài một chương trình xem video để xem.</string>
-	
+	<string name="back">Quay lại</string>
 </resources>
