--- a/trunk/android/Euro2012/res/values-ko/strings.xml
+++ b/trunk/android/Euro2012/res/values-ko/strings.xml
@@ -72,4 +72,5 @@
 	<string name="back">이전</string>
 	<string name="start">경기/ 시합 시작</string>
 	<string name="end">경구종료</string>
+	<string name="nonetworktoupdate">abcdef.</string>
 </resources>
