--- a/android/Euro2012/res/values-vi/strings.xml
+++ b/android/Euro2012/res/values-vi/strings.xml
@@ -73,4 +73,5 @@
 	<string name="back">Quay lại</string>
 	<string name="start">Trận đấu bắt đầu</string>
 	<string name="end">Trận đấu kết thúc</string>
+	<string name="nonetworktoupdate">Cần có kết nối mạng để cập nhật dữ liệu.</string>
 </resources>
