--- a/android/Euro2012/res/values-ko/strings.xml
+++ b/android/Euro2012/res/values-ko/strings.xml
@@ -47,7 +47,7 @@
     <string name="vibrate">설레다</string>
     <string name="settinglanguage">언너</string>
     <string name="english">English</string>
-    <string name="korean">한국의</string>
+    <string name="korean">한국어</string>
     <string name="vietnam">Tiếng Việt</string>
     <string name="contact">연락</string>
     <string name="feedback">문의</string>
