--- a/android/Story/res/values/strings.xml
+++ b/android/Story/res/values/strings.xml
@@ -16,4 +16,8 @@
     <string name="update">Cập nhật</string>
     <string name="info">Thông tin</string>
     <string name="moreapp">Ứng dụng khác</string>
+    <string name="email">chinhnx2712@gmail.com</string>
+    <string name="choose">Lựa chọn</string>
+    <string name="ok">OK</string>
+    <string name="infodetail">Chúng tôi rất mong nhận được phản hồi của các bạn. Mọi chi tiết xin gửi vào hòm thư : </string>
 </resources>
