show day in dayview

--- a/android/IC_LichVanNien/res/values/strings.xml
+++ b/android/IC_LichVanNien/res/values/strings.xml
@@ -16,4 +16,5 @@
 	<string name="hour">Giờ</string>
 	<string name="day">Ngày</string>
 	<string name="month">Tháng</string>
+	<string name="year">Năm</string>
 </resources>
